[package]
name = "humane"
version = "0.0.0"
edition = "2021"
description = "Humane testing for rigid machines"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "3.2.6", features = ["derive"] }
wax = "0.5.0"
futures = "0.3"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "fs",
    "time",
    "macros",
] }
hashbrown = { version = "0.13.1", features = ["serde"] }
regex = "1.1"
kuchiki = "0.8.1"
lol_html = "0.3"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
twelf = { version = "0.7", default-features = false, features = [
    "env",
    "clap",
    "json",
    "yaml",
    "toml",
] }
portpicker = "0.1"
actix-web = "4"
actix-files = "0.6"
json_dotpath = "1.1.0"
async-trait = "0.1"
cucumber = "0.13"
tempfile = "3.0.2"
chromiumoxide = "0.4"
flate2 = "1.0"
