[package]
name = "humane_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
wax = "0.5.0"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "fs",
    "time",
    "macros",
] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
nondestructive = "0.0.20"
similar = "2.4.0"
inventory = "0.3.15"
portpicker = "0.1"
actix-web = "4"
actix-files = "0.6"
json_dotpath = "1.1.0"
tempfile = "3.0.2"
similar-string = "1.4.3"

[profile.dev.package.similar]
opt-level = 3
