[package]
name = "humane_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
wax = "0.5.0"
tokio = { version = "1", features = ["full", "tracing"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
nondestructive = "0.0.20"
similar = { version = "2.4.0", features = ["inline"] }
inventory = "0.3.15"
portpicker = "0.1"
actix-web = "4"
actix-files = "0.6"
json_dotpath = "1.1.0"
tempfile = "3.0.2"
similar-string = "1.4.3"
console = "0.15"
async-trait = "0.1.78"
pagebrowse_lib = { path = "../../pagebrowse/crates/pagebrowse_lib" }
clap = { version = "4", features = ["cargo"] }
schematic = { version = "0.12.0", features = ["yaml"] }

[profile.dev.package.similar]
opt-level = 3
